prevent white space under footer with smaller main content

--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -127,6 +127,7 @@ ul {
   display: grid;
   flex: 1 1 auto;
   grid-template-rows: 100%;
+  min-height: calc(100vh - var(--page-header-height) - 400px);
   overflow: hidden;
 
   main {
